<resources>
    <string name="app_name">Petify</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="petify_logo">Petify Logo</string>

    <!-- Strings related to Pet Food Search -->
    <string name="pet_type">Pets Type</string>
    <string name="pet_breed">Pets Breed</string>
    <string name="pet_age">Pets Age</string>
    <string name="pet_Weight">Pets Weight</string>
    <string name="title_activity_maps">Map</string>
</resources>