<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/F9A243"
    tools:context=".PetFoodSearch.PetFoodSearch_Page">

    <EditText
        android:id="@+id/pet_Weight"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/et_style"
        android:backgroundTint="@android:color/white"
        android:hint="@string/pet_Weight"
        android:textColorHint="#FF888888"
        android:textColor="#000000"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pet_age" />

    <EditText
        android:id="@+id/pet_age"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/et_style"
        android:backgroundTint="@android:color/white"
        android:hint="@string/pet_age"
        android:textColorHint="#FF888888"
        android:textColor="#000000"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pet_breed" />

    <EditText
        android:id="@+id/pet_breed"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/et_style"
        android:backgroundTint="@android:color/white"
        android:hint="@string/pet_breed"
        android:textColorHint="#FF888888"
        android:textColor="#000000"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pets_type" />

    <EditText
        android:id="@+id/pets_type"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:autofillHints="Pets Type"
        android:textColorHint="#FF888888"
        android:textColor="#000000"
        android:background="@drawable/et_style"
        android:backgroundTint="@android:color/white"
        android:hint="@string/pet_type"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="230dp"
        android:layout_height="154dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pet_Weight"
        app:layout_constraintVertical_bias="0.888"
        app:srcCompat="@drawable/petify_logo_2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="370dp"
        android:layout_height="99dp"
        android:layout_marginTop="16dp"
        android:text="Fill in Your Pet’s Information"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_findit"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_gravity="start"
        android:backgroundTint="#743E03"
        android:text="Find It!"
        android:textColor="#F2E0D0"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:strokeColor="#743E03"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>